--- a/style_barra.css
+++ b/style_barra.css
@@ -1,19 +1,18 @@
 /* Add a black background color to the top navigation */
 .topnav {
+  width:100%; auto ;
   background-color: #333;
   overflow: hidden;
-  width: 33%;
+  size:10%; auto;
 }
 
 
 /* Style the links inside the navigation bar */
-.topnav a {
-  float: left;
+.topnav a { float: left;
   color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  
   font-size: 17px;
 }
 
