--- a/style.css
+++ b/style.css
@@ -1,22 +1,31 @@
 #mapid {
-	height:420px;
-	width: 1120px; 
-	margin-left: 75px; 
-	margin-right: 100px;
+	height:100vh;
+	width: auto;
+	z-index: 1;
+}
+
+#navbar {
+  z-index: 2;
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* Create two equal columns that floats next to each other */
 .column {
+  margin-left: 50px;
+  margin-right: 50px;
+  margin-top: 100px;
   float: left;
-  width: 608px;
-  padding:7px;
-  height: 340px; /* Should be removed. Only for demonstration */
+  padding:1em 1em 1em 1em;
   text-align:left;
-  border:0.2px solid;
-  background-color:#CCD1D1;
-  opacity: 0.99;
+  border-style:solid;
+  border-color: grey;
+  border-width: 1px; 
+  background-color:rgba(255,255,255,.75);
   
 }
+
 
 /* Clear floats after the columns */
 .row:after {
@@ -25,20 +34,40 @@
   clear: both;
 }
 
+.split {
+  height: 100%;
+  width: 50%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  overflow-x: hidden;
+  padding-top: 20px;
+}
+
+splitleft {
+  left: 0;
+  background-color: rgba(255,255,255,.85;
+}
+
+splitright {
+ left: 100%;
+  background-color: rgba(255,255,255,.85;
+}
+
 h1 {
-  font-size: 220%;
+  font-size: 300%;
   text-align: left;
-  margin: 10px;
+  margin: 20%;
   
 }
 
 h2 {
-  font-size: 25px;
-  margin: 10px;
+  font-size: 200%;
+  margin: 20%;
 }
 
 p {
-  font-size: 15px;
+  font-size: 100%;
   text-align:justify;
 }
 
@@ -58,5 +87,4 @@ p {
     float: left;
     margin-right: 8px;
     opacity: 0.75;
-}	
-
+}
